@@ -1,6 +1,7 @@
 Angle.pm
 Changes
 examples/ex1.pl
+examples/ex2.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
